methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: '=' expected but ';' found.
def haveBaggle():Boolean = {if (seenBaggle==true) {
^