methods.returning.MethodsReturning.scala.code
var seenBaggle==false

def haveBaggle():Boolean = {if (seenBaggle==true) {
  return true;
} else {
  return false}
}





while (haveBaggle==false) {
  for (i<-1 to  6) {
    forward();
    if (isOverBaggle==true) {
      seenBaggle==true
    }
  }
  for (i<-1 to 6 ) {
    backward();
  }
}